[package]
name = "miden-app-dj"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "miden_app_dj_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs"
required-features = ["web_server"]

[features]
default = []
web_server = ["axum", "tower-http"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
miden-client = { version = "0.9.4", features= [] }
miden-vm = { version = "0.16.2", features = ["std"] }
miden-processor = { version = "0.16.2", features = ["std"] }
miden-stdlib = { version = "0.16.2", features = ["std"] }
once_cell = "1.18.0"

# Web server dependencies - tokio always available, others optional
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }